--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,19 +1,24 @@
+
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
-    <div id="error_explanation">
+     <div id="error_explanation">
       <ul>
         <% task.errors.full_messages.each do |task| %>
           <li><%= task %></li>
         <% end %>
       </ul>
-    </div>
+     </div>
   <% end %>
   
-  <%= f.label :title, 'タイトル' %>
-  <%= f.text_field :title %>
+  <div class="form-group">
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status, class: 'form-control' %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
+  <%= f.text_field :content, class: 'form-control' %>
+  </div>
 
-  <%= f.submit '投稿' %>
+  <%= f.submit '投稿', class: 'btn btn-primary' %>
 <% end %>
